Campo Linguagem Favorita com selectOneRadio

--- a/hello/WebContent/estudante_form.xhtml
+++ b/hello/WebContent/estudante_form.xhtml
@@ -23,7 +23,7 @@
 	 		Pais: 			
 			<h:selectOneMenu value="#{estudante.pais}">
 				<f:selectItems value="#{estudante.opcoesPais}" />
-			</h:selectOneMenu>		 
+			</h:selectOneMenu>	 
 			
 			<!-- 
 			<h:selectOneMenu value="#{estudante.pais}">
@@ -36,6 +36,15 @@
 				<f:selectItem itemValue="United States" itemLabel="United States" />
 			</h:selectOneMenu>		 
 			 -->
+
+			<br/><br/>
+			Linguagem de Programação favorita do estudante:
+			<h:selectOneRadio value="#{estudante.linguagemFavorita}">
+				<f:selectItem itemValue="Java" itemLabel="Java" />
+				<f:selectItem itemValue="Python" itemLabel="C#" />
+				<f:selectItem itemValue="PHP" itemLabel="PHP" />
+				<f:selectItem itemValue="Ruby" itemLabel="Ruby" />
+			</h:selectOneRadio>
 
 		    <h:commandButton value="Enviar" action="#{estudante.salvar}" />
 
