--- a/hello/WebContent/hello.xhtml
+++ b/hello/WebContent/hello.xhtml
@@ -8,6 +8,7 @@
 	</h:head>
 	<h:body>
 		<h:form>
+			<h:messages />
 			<h:inputText id="name" value="#{theUserName}"
 					a:placeholder="Qual seu nome?" />
 			<h:commandButton value="Enviar" action="minharesposta"/>
