correção nas opções de linguagem favorita (selectOneRadio)

--- a/hello/WebContent/estudante_form.xhtml
+++ b/hello/WebContent/estudante_form.xhtml
@@ -41,7 +41,7 @@
 			Linguagem de Programação favorita do estudante:
 			<h:selectOneRadio value="#{estudante.linguagemFavorita}">
 				<f:selectItem itemValue="Java" itemLabel="Java" />
-				<f:selectItem itemValue="Python" itemLabel="C#" />
+				<f:selectItem itemValue="Python" itemLabel="Python" />
 				<f:selectItem itemValue="PHP" itemLabel="PHP" />
 				<f:selectItem itemValue="Ruby" itemLabel="Ruby" />
 			</h:selectOneRadio>
